Fix visual bugs in progress bar and Quick Format dialog on macOS
Fix extra whitespace and misaligned Z icon

Update to e918b430b6 after some recent changes

--- a/chrome/content/zotero-platform/mac-big-sur/style.css
+++ b/chrome/content/zotero-platform/mac-big-sur/style.css
@@ -12,10 +12,6 @@ tabs > tab[visuallyselected="true"] hbox > .tab-text {
 }
 
 /* Quick Format dialog, which is based on window corners, which are different on Big Sur */
-#quick-format-dialog #zotero-icon {
-	margin-top: 2px;
-}
-
 #quick-format-iframe {
 	margin-top: 2px;
 }
