--- a/chrome/content/zotero-platform/mac/integration.css
+++ b/chrome/content/zotero-platform/mac/integration.css
@@ -20,7 +20,7 @@ window.citation-dialog {
 }
 
 .citation-dialog.progress-bar .citation-dialog.deck {
-	height: 32px;
+	height: 37px;
 }
 
 .citation-dialog.search {
